--- a/public/css/app.css
+++ b/public/css/app.css
@@ -433,6 +433,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-8\/12 {
   width: 66.666667%;
 }
+.w-6\/12 {
+  width: 50%;
+}
+.w-5\/12 {
+  width: 41.666667%;
+}
 .items-center {
   align-items: center;
 }
