adding protection to login register dashboard

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -453,6 +453,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
